--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name="description" content="Oferecemos serviços como Musculação, Hidroginástica, Pilates, Fisioterapia, Ginástica em grupo, entre outros.">
+        <meta name="author" content="jF">
+        <meta name="keywords" content="musculação, personal trainer, academia para idosos, hidroginástica, pilates, ginástica, zumba, fisioterapia">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <title>Helthier- Personal Studio</title>
+        <title> Helthier | Personal Studio </title>
     </head>
     <body>
         <section class="showcase">
@@ -27,7 +31,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                    Error, impedit possimus?
                    Ipsum modi tempore tenetur minus porro, libero ad suscipit.</p>
-                <a href="#">Cuide-se</a>
+                <a href="login.php">Cuide-se</a>
             </div>
 
             <ul class="social">
