--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                 </section>
         
                 <section id="register">
-                    <a href="register.php">Não é inscrito? <strong>Cadastre-se.</strong></a>
+                    <a href="register.html">Não é inscrito? <strong>Cadastre-se.</strong></a>
                 </section>
             </div>
 
