--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-    session_start()
-?>
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -17,20 +14,6 @@
         <title> Helthier | Personal Studio </title>
     </head>
     <body>
-        <?php
-            if(!isset($_SESSION['login'])) 
-            {
-                if(isset($_POST['button'])) {
-                    echo 'Formulário Enviado';
-                }
-
-                include('login.php');
-            }
-            else 
-            {
-                include('dashboard.html');
-            }
-        ?>
         <section class="showcase">
 
             <header>
@@ -48,7 +31,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                    Error, impedit possimus?
                    Ipsum modi tempore tenetur minus porro, libero ad suscipit.</p>
-                <a href="login.php">Cuide-se</a>
+                <a href="login.html">Cuide-se</a>
             </div>
 
             <ul class="social">
