--- a/login.html
+++ b/login.html
@@ -31,12 +31,12 @@
                     <form method="POST">
                         <input type="email" name="email" placeholder="E-mail" autofocus maxlength="40">
                         <input type="password" name="password" placeholder="Senha" maxlength="16">
-                        <input type="submit" name="button" value="Acessar">
+                        <a href="">Acessar</a>
                     </form>
                 </section>
         
                 <section id="register">
-                    <a href="register.php">Não é inscrito? <strong>Cadastre-se.</strong></a>
+                    <a href="register.html">Não é inscrito? <strong>Cadastre-se.</strong></a>
                 </section>
             </div>
 
