Inclusão de prevenção de redirecionamento e links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="showcase">
 
             <header>
-                <h2 class="logo">Helthier</h2>
+                <h2 class="logo"><a href="index.html" rel="noopen noreferrer">Helthier</a></h2>
                 <div class="toggle"></div>
             </header>
 
@@ -31,7 +31,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                    Error, impedit possimus?
                    Ipsum modi tempore tenetur minus porro, libero ad suscipit.</p>
-                <a href="login.html">Cuide-se</a>
+                <a href="login.html" rel="noopen noreferrer">Cuide-se</a>
             </div>
 
             <ul class="social">
@@ -43,11 +43,11 @@
 
         <div class="menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contato</a></li>                
+                <li><a href="#" rel="noopen noreferrer">Home</a></li>
+                <li><a href="#" rel="noopen noreferrer">Sobre</a></li>
+                <li><a href="#" rel="noopen noreferrer">Serviços</a></li>
+                <li><a href="#" rel="noopen noreferrer">Blog</a></li>
+                <li><a href="#" rel="noopen noreferrer">Contato</a></li>                
             </ul>
         </div>
 
