--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <section class="showcase">
 
             <header>
-                <h2 class="logo">Helthier</h2>
+                <h2 class="logo"><a href="index.html" rel="noopen noreferrer">Helthier</a></h2>
                 <div class="toggle"></div>
             </header>
 
@@ -31,12 +31,12 @@
                     <form method="POST">
                         <input type="email" name="email" placeholder="E-mail" autofocus maxlength="40">
                         <input type="password" name="password" placeholder="Senha" maxlength="16">
-                        <a href="">Acessar</a>
+                        <a href="#" rel="noopen noreferrer">Acessar</a>
                     </form>
                 </section>
         
                 <section id="register">
-                    <a href="register.html">Não é inscrito? <strong>Cadastre-se.</strong></a>
+                    <a href="register.html" rel="noopen noreferrer">Não é inscrito? <strong>Cadastre-se.</strong></a>
                 </section>
             </div>
 
@@ -49,11 +49,11 @@
 
         <div class="menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contato</a></li>                
+                <li><a href="#" rel="noopen noreferrer">Home</a></li>
+                <li><a href="#" rel="noopen noreferrer">Sobre</a></li>
+                <li><a href="#" rel="noopen noreferrer">Serviços</a></li>
+                <li><a href="#" rel="noopen noreferrer">Blog</a></li>
+                <li><a href="#" rel="noopen noreferrer">Contato</a></li>                
             </ul>
         </div>
 
